experimental/parser/testdata/parser/range/reserved_default_syntax.proto.stderr.txt
error: cannot use identifiers in reserved range in syntax mode
  --> testdata/parser/range/reserved_default_syntax.proto:18:14
   |
18 |     reserved foo, "foo";
   |              ^^^
  help: quote it to make it into a string literal
   |
18 |     reserved "foo", "foo";
   |              +   +

encountered 1 error
